# kaspersky_password_manager_exporter

./: README.md  format.sh  pyproject.toml
kaspersky_password_manager_exporter/: convert.py
