[tool.poetry]
name = "kaspersky_password_manager_exporter"
version = "0.1.0"
description = ""
authors = ["Sergey Chebotaryov <sergey.che.86@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pyparsing = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
